# coq

./: .ocamlformat-ignore  Makefile.common  README.md  RealSimpl.v  configure.ml  script.sh  test.v
boot/: usage.ml
checker/: values.ml
dev/: top_printers.ml
engine/: eConstr.ml  eConstr.mli  evarutil.ml  evd.ml  evd.mli  logic_monad.ml  namegen.ml  proofview.ml  termops.ml  univSubst.ml
interp/: constrintern.ml  impargs.ml
kernel/: cClosure.ml  cClosure.mli  cPrimitives.ml  cPrimitives.mli  clambda.ml  constr.ml  constr.mli  cooking.ml  declarations.ml  declareops.ml  environ.ml  environ.mli  genOpcodeFiles.ml  indTyping.ml  inductive.ml  inferCumulativity.ml  mod_subst.ml  names.ml  names.mli  nativecode.ml  nativelambda.ml  primred.ml  primred.mli  reduction.ml  reduction.mli  retypeops.ml  term_typing.ml  typeops.ml  typeops.mli  vars.ml  vconv.ml  vmemitcodes.ml
lib/: dune  instr.noperf.ml  instr.perf.ml  pp.ml  system.ml  system.mli
perf/: perf.c  perf.ml  perf.mli
pretyping/: cases.ml  cbv.ml  cbv.mli  constr_matching.ml  detyping.ml  evarconv.ml  heads.ml  indrec.ml  inductiveops.ml  inductiveops.mli  nativenorm.ml  patternops.ml  pretyping.ml  reductionops.ml  reductionops.mli  retyping.ml  tacred.ml  typing.ml  unification.ml  vnorm.ml
printing/: printer.ml
proofs/: clenvtac.ml  logic.ml
sysinit/: coqargs.ml  coqargs.mli
tactics/: btermdn.ml  cbn.ml  class_tactics.ml  eqschemes.ml  equality.ml  hints.ml  hints.mli  rewrite.ml  tactics.ml  tactics.mli  term_dnet.ml
toplevel/: ccompile.ml  coqtop.ml  dune  vernac.ml  vernac.mli
(+53 files in other folders)
