(library
 (name toplevel)
 (public_name coq.toplevel)
 (synopsis "Coq's Interactive Shell [terminal-based]")
 (wrapped false)
 (libraries num coq.stm coq.lean_import))
; Coqlevel provides the `Num` library to plugins, we could also use
; -linkall in the plugins file, to be discussed.

(coq.pp (modules g_toplevel))
